SERVER-14039 Wrong limit after skip with $nearSphere, 2d index